--- a/Ch02/2.Creating_Input_Pipelines.ipynb
+++ b/Ch02/2.Creating_Input_Pipelines.ipynb
@@ -61,7 +61,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating a tf.data.Dataset "
+    "## Creating a tf.data.Dataset \n",
+    "\n",
+    "Here we are creating the `tf.data` pipeline that executes the above steps."
    ]
   },
   {
@@ -93,25 +95,25 @@
     "label_ds = csv_ds.map(lambda a,b: b)\n",
     "\n",
     "def get_image(file_path):\n",
-    "  #file_path = data[0]\n",
-    "  img = tf.io.read_file(data_dir + file_path)\n",
-    "  # convert the compressed string to a 3D uint8 tensor\n",
-    "  img = tf.image.decode_png(img, channels=3)\n",
-    "  # Use `convert_image_dtype` to convert to floats in the [0,1] range.\n",
-    "  img = tf.image.convert_image_dtype(img, tf.float32)\n",
-    "  # resize the image to the desired size.\n",
-    "  return tf.image.resize(img, [64, 64])\n",
+    "    \n",
+    "    img = tf.io.read_file(data_dir + file_path)\n",
+    "    # convert the compressed string to a 3D uint8 tensor\n",
+    "    img = tf.image.decode_png(img, channels=3)\n",
+    "    # Use `convert_image_dtype` to convert to floats in the [0,1] range.\n",
+    "    img = tf.image.convert_image_dtype(img, tf.float32)\n",
+    "    # resize the image to the desired size.\n",
+    "    return tf.image.resize(img, [64, 64])\n",
     "\n",
     "\n",
     "image_ds = fname_ds.map(get_image)\n",
-    "print(image_ds)\n",
+    "print(\"The image dataset contains: {}\".format(image_ds))\n",
     "label_ds = label_ds.map(lambda x: tf.one_hot(x, depth=10))\n",
     "data_ds = tf.data.Dataset.zip((image_ds, label_ds))\n",
     "\n",
     "data_ds = data_ds.shuffle(buffer_size= 20)\n",
     "data_ds = data_ds.batch(5)\n",
     "for item in data_ds:\n",
-    "    #print(item)\n",
+    "    print(item)\n",
     "    break\n"
    ]
   },
@@ -119,7 +121,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Defining and training a model"
+    "### Defining and training a model\n",
+    "\n",
+    "Here we are defining a simple Convolution Neural Network (CNN) model to train it on the image data we just retrieved. You don't have to worry about the technical details of CNNs right now. We will discuss them in detail in the next chapter."
    ]
   },
   {
@@ -147,42 +151,8 @@
    "source": [
     "## Using Keras data generators to retrieve data\n",
     "\n",
-    "### Restructuring the data in the folder"
+    "Instead of `tf.data` API let us use the Keras `ImageDataGenerator` to retrieve the data. As you can see, the `ImageDataGenerator` involves much less code than the using the `tf.data` API. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0      None\n",
-       "1      None\n",
-       "2      None\n",
-       "3      None\n",
-       "4      None\n",
-       "       ... \n",
-       "205    None\n",
-       "206    None\n",
-       "207    None\n",
-       "208    None\n",
-       "209    None\n",
-       "Length: 210, dtype: object"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -324,7 +294,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using the `tensorflow-datasets` library"
+    "## Using the `tensorflow-datasets` library\n",
+    "\n",
+    "Here we will use the `tensorflow-datasets` package. It is a curated list of popular datasets available for machine learning projects. With this package you can download a dataset in a single line. This means you don't have to worry about downloading/extracting/formatting data manually. All of that will be already done when you import data using the `tensorflow-datasets` library."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lists the available datasets"
    ]
   },
   {
@@ -505,13 +484,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Download the Cifar10 dataset and view information"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load a given dataset by name, along with the DatasetInfo\n",
-    "data, info = tfds.load(\"cifar10\", with_info=True)"
+    "data, info = tfds.load(\"cifar10\", with_info=True)\n",
+    "print(info)"
    ]
   },
   {
@@ -550,8 +537,15 @@
      ]
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "print(info)"
+    "### Exploring the data \n",
+    "\n",
+    "Here we will print the `data` and see what it provides. Then we will need to batch the data as data is provided as individual samples when you import it from `tensorflow-datasets`."
    ]
   },
   {
@@ -920,6 +914,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training a simple CNN on the Cifar10 data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -1151,8 +1152,6 @@
     "    Dense(10, activation='softmax')\n",
     "])\n",
     "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['acc'])\n",
-    "\n",
-    "\n",
     "\n",
     "model.fit(train_ds, epochs=100)"
    ]
