--- a/Ch02/3.Misc_Graphs.ipynb
+++ b/Ch02/3.Misc_Graphs.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Miscellaneous\n",
+    "\n",
+    "This contains code that was used to generate some graphs used in the book. Code is not provided in the book"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
