--- a/Ch03/1.Fully_connected_networks.ipynb
+++ b/Ch03/1.Fully_connected_networks.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fully-Connected Neural Networks\n",
+    "\n",
+    "We have already discussed a type of fully-connected neural network (i.e. multi-layer perceptron) in Chapter 1. In this chapter we will learn about a new type of fully-connected neural network; an *autoencoder* model. An autoencoder is primarly used to be trained in an unsupervised fashion. This means the model can be trained just using inputs, and no labels. \n",
+    "\n",
+    "In this chapter, you will train an autoencoder to reconstruct images. Specifically, the autoencoder takes the image data, compress it to a small latent space and then reconstruct the image from the compressed latent space values. This is a great way to provide useful features using unsupervised data, for supervised models. For this task we will be using a popular hand-written digit dataset known as MNIST (https://en.wikipedia.org/wiki/MNIST_database).\n",
+    "\n",
+    "## Import necessary libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -20,7 +33,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loading the MNIST data"
+    "## Loading MNIST data\n",
+    "\n",
+    "Let's load the dataset using Keras. Due to the popularity of the dataset, many utility functions can be found to load the dataset with just a single line of code. `x_train` and `x_test` contains 28x28 sized images of hand-written digits and `y_train` and `y_test` contains the inter number representing that image (the label)."
    ]
   },
   {
@@ -30,6 +45,18 @@
    "outputs": [],
    "source": [
     "(x_train, y_train), (x_test, y_test) = load_data()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Transforming MNIST data\n",
+    "\n",
+    "This is an important step. We do two important things here.\n",
+    "\n",
+    "* Unwrap the (28x28) image into a 1-dimensional 784 vector (because fully-connected networks need a 1-dimensional input).\n",
+    "* Normalize the input by subtracting 128 and dividing by 128. This is because the pixel values are between [0,255]."
    ]
   },
   {
@@ -45,7 +72,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Extracting a small sample and plotting the data"
+    "## Extracting a small sample and plotting the data\n",
+    "\n",
+    "Here we will plot some of the data to get an idea of what we are dealing with."
    ]
   },
   {
@@ -87,8 +116,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "f, axes = plt.subplots(2, 5, figsize=(12,4))\n",
     "for i, (img, lbl) in enumerate(zip(sample_images, sample_labels)):\n",
     "    r, c = i//5, i%5\n",
@@ -101,7 +128,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Defining the autoencoder model"
+    "## Defining the autoencoder model\n",
+    "\n",
+    "Now it's time to define the model. We will define a simple autoencoder model. This model has the following layers.\n",
+    "\n",
+    "* A Dense layer with 64 nodes and `relu` activation\n",
+    "* A Dense layer with 32 nodes and `relu` activation\n",
+    "* A Dense layer with 64 nodes and `relu` activation\n",
+    "* A Dense layer with 784 nodes and `tanh` activation (i.e. the layer that reconstructs the images)\n",
+    "\n",
+    "Finally, we will compile the model with mean squared error (mse) loss and the `adam` optimizer."
    ]
   },
   {
@@ -149,7 +185,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training the model"
+    "## Training the model\n",
+    "\n",
+    "Training the model is simple. You call the `fit()` method with the correct data. Note how the input and the output to the model are the same. This is because we are trying to construct the exact same input as the output of the model. We are using a batch size of 64 and 10 epochs."
    ]
   },
   {
@@ -193,7 +231,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plotting the loss over time"
+    "## Plotting the loss over time\n",
+    "\n",
+    "It is quite clear that our model is learning. You can see the loss steadily going down."
    ]
   },
   {
