--- a/Ch03/2.Convolution_networks.ipynb
+++ b/Ch03/2.Convolution_networks.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Convolution Neural Networks\n",
+    "\n",
+    "Convolution neural networks (CNNs) have gained unparalleled popularity in computer vision tasks. A convolution neural network consists of several important components, such as,\n",
+    "\n",
+    "* Convolution layers\n",
+    "* Pooling layers\n",
+    "* Dense layers (for final prediction)\n",
+    "\n",
+    "In this chapter, we will use CNNs to learn the Cifar10 dataset. Like MNIST, Cifar10 is another popular dataset in computer vision. But it is a much more interesting dataset as you will see.\n",
+    "\n",
+    "## Importing necessary libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -19,7 +36,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Implementing a Convolution Neural Network"
+    "## Loading and Exploring the data\n",
+    "\n",
+    "Here we will load the dataset using the `tensorflow-datasets` library. Next, we will print the very first item in the dataset and see what we have. You will see that image data varies between [0,255]. Finally, we will plot some of the images to understand the classes and images we have to work with. We will not explore this too much as we have already worked with this dataset briefly in Chapter 2."
    ]
   },
   {
@@ -134,6 +153,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defining the model\n",
+    "\n",
+    "Let's define a CNN model. But wait, we are getting an error trying to run this model. This is because, one needs to be careful of the output sizes of the model's each layer. In this case, the model we created has led to an invalid height and width dimensions causing an error."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -181,6 +209,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defining the model the correct way\n",
+    "\n",
+    "Good thing we got that error out of the way. Now let's fix the model above so we don't have any errors."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -197,6 +234,17 @@
     "     layers.Dense(10, activation='softmax')]\n",
     ")\n",
     "cnn.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['acc'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training the model\n",
+    "\n",
+    "Finally, you can train the model. But to do that we will need to slightly change the dataset object we have. We will convert the images to `float32` (which are originally `uint8`) and convert labels to one-hot encoded vectors. To do this we will use the `tf.data.DataSet.map()` function as we have done earlier.\n",
+    "\n",
+    "Now let's train the model. We can see that training accuracy of the model is growing steadily. That's a great result! "
    ]
   },
   {
