--- a/Ch03/4.Transformer.ipynb
+++ b/Ch03/4.Transformer.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Transformers\n",
+    "\n",
+    "## Importing necessary libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -8,8 +17,15 @@
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
-    "from tensorflow.keras import layers\n",
+    "from tensorflow.keras import layers, models\n",
     "import math"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defining the inputs and variables"
    ]
   },
   {
@@ -42,8 +58,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defining the SelfAttention layer"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +78,6 @@
     }
    ],
    "source": [
-    "\"i kicked the ball and it disappeared\"\n",
     "class SelfAttentionLayer(layers.Layer):\n",
     "    \n",
     "    def __init__(self, d):\n",
@@ -76,10 +98,10 @@
     "            trainable=True, dtype='float32'\n",
     "        )\n",
     "    \n",
-    "    def call(self, x):\n",
-    "        q = tf.matmul(x,self.Wq)\n",
-    "        k = tf.matmul(x,self.Wk)\n",
-    "        v = tf.matmul(x,self.Wv)\n",
+    "    def call(self, q_x, k_x, v_x):\n",
+    "        q = tf.matmul(q_x,self.Wq)\n",
+    "        k = tf.matmul(k_x,self.Wk)\n",
+    "        v = tf.matmul(v_x,self.Wv)\n",
     "\n",
     "        p = tf.nn.softmax(tf.matmul(q, k, transpose_b=True)/math.sqrt(self.d))\n",
     "        p = tf.squeeze(p)\n",
@@ -88,13 +110,20 @@
     "        return h,p\n",
     "\n",
     "layer = SelfAttentionLayer(512)\n",
-    "h, p = layer(x)\n",
+    "h, p = layer(x, x, x)\n",
     "print(h.shape)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using the Self-Attention in a Multi-head Attention Layer"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -107,15 +136,22 @@
    ],
    "source": [
     "multi_attn_head = [SelfAttentionLayer(64) for i in range(8)]\n",
-    "outputs = [head(x)[0] for head in multi_attn_head]\n",
+    "outputs = [head(x, x, x)[0] for head in multi_attn_head]\n",
     "\n",
     "outputs = tf.concat(outputs, axis=-1)\n",
     "print(outputs.shape)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defining the Fully-Connected Layer"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -162,8 +198,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defining a SelfAttention layer with Masking Capability"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -196,13 +239,12 @@
     "            trainable=True, dtype='float32'\n",
     "        )\n",
     "    \n",
-    "    def call(self, x, mask=None):\n",
-    "        q = tf.matmul(x,self.Wq)\n",
-    "        k = tf.matmul(x,self.Wk)\n",
-    "        v = tf.matmul(x,self.Wv)\n",
-    "\n",
-    "        p = tf.matmul(q, k, transpose_b=True)/math.sqrt(self.d)\n",
-    "        p = tf.squeeze(p)\n",
+    "    def call(self, q_x, k_x, v_x, mask=None):\n",
+    "        q = tf.matmul(q_x,self.Wq) #[None, t, d]\n",
+    "        k = tf.matmul(k_x,self.Wk) #[None, t, d]\n",
+    "        v = tf.matmul(v_x,self.Wv) #[None, t, d]\n",
+    "        p = tf.matmul(q, k, transpose_b=True)/math.sqrt(self.d) # [None, t, t]\n",
+    "        \n",
     "        if mask is None:\n",
     "            p = tf.nn.softmax(p)\n",
     "        else:\n",
@@ -210,18 +252,25 @@
     "            p = tf.nn.softmax(p)\n",
     "                \n",
     "\n",
-    "        h = tf.matmul(p, v)\n",
+    "        h = tf.matmul(p, v) # [None, t, t] . [None, t, d] => [None, t, d]\n",
     "        return h,p\n",
     "\n",
     "layer = SelfAttentionLayer(512)\n",
     "mask = 1 - tf.linalg.band_part(tf.ones((7, 7)), -1, 0)\n",
-    "h, p = layer(x, mask)\n",
+    "h, p = layer(x, x, x, mask)\n",
     "print(h.shape)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defining a Mask using TensorFlow"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -240,58 +289,17 @@
     }
    ],
    "source": [
+    "# Controlling decimal formatting\n",
+    "#np.set_printoptions(precision=3)\n",
+    "#print(p.numpy())\n",
+    "\n",
     "mask = 1 - tf.linalg.band_part(tf.ones((7, 7)), -1, 0)\n",
     "print(mask)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1.    0.    0.    0.    0.    0.    0.   ]\n",
-      " [0.888 0.112 0.    0.    0.    0.    0.   ]\n",
-      " [0.051 0.028 0.921 0.    0.    0.    0.   ]\n",
-      " [0.261 0.556 0.142 0.042 0.    0.    0.   ]\n",
-      " [0.592 0.191 0.068 0.068 0.081 0.    0.   ]\n",
-      " [0.141 0.275 0.106 0.17  0.183 0.126 0.   ]\n",
-      " [0.482 0.11  0.117 0.073 0.063 0.134 0.022]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "np.set_printoptions(precision=3)\n",
-    "print(p.numpy())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.Tensor([1. 2.], shape=(2,), dtype=float32)\n",
-      "tf.Tensor([1.5 1.5], shape=(2,), dtype=float32)\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = tf.constant([1.,2.])\n",
-    "b = tf.constant([2.,1.])\n",
-    "print(tf.stack([a,b])[0,:])\n",
-    "print(tf.reduce_mean(tf.stack([a,b]), axis=0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -303,10 +311,147 @@
     }
    ],
    "source": [
-    "multi_attn_head = [SelfAttentionLayer(512) for i in range(8)]\n",
-    "outputs = [head(x)[0] for head in multi_attn_head]\n",
-    "outputs = tf.math.add_n(outputs)\n",
+    "multi_attn_head = [SelfAttentionLayer(64) for i in range(8)]\n",
+    "outputs = [head(x, x, x)[0] for head in multi_attn_head]\n",
+    "outputs = tf.concat(outputs, axis=-1)\n",
     "print(outputs.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defining the Encoder Layer and the Decoder Layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EncoderLayer(layers.Layer):\n",
+    "    \n",
+    "    def __init__(self, d, n_heads):\n",
+    "        super(EncoderLayer, self).__init__()\n",
+    "        self.d = d\n",
+    "        self.d_head = int(d/n_heads) \n",
+    "        self.n_heads = n_heads\n",
+    "        self.attn_heads = [SelfAttentionLayer(self.d_head) for i in range(self.n_heads)]\n",
+    "        self.fc_layer = FCLayer(2048, self.d)\n",
+    " \n",
+    "    def call(self, x):\n",
+    "        print(x.shape)\n",
+    "        def compute_multihead_output(x):\n",
+    "            outputs = [head(x, x, x)[0] for head in self.attn_heads]            \n",
+    "            outputs = tf.concat(outputs, axis=-1)\n",
+    "            return outputs\n",
+    "\n",
+    "        h1 = compute_multihead_output(x)\n",
+    "        y = self.fc_layer(h1)\n",
+    "        \n",
+    "        return y\n",
+    "\n",
+    "class DecoderLayer(layers.Layer):\n",
+    "    \n",
+    "    def __init__(self, d, n_heads):\n",
+    "        super(DecoderLayer, self).__init__()\n",
+    "        self.d = d\n",
+    "        self.d_head = int(d/n_heads)\n",
+    "        self.dec_attn_heads = [SelfAttentionLayer(self.d_head) for i in range(n_heads)]\n",
+    "        self.attn_heads = [SelfAttentionLayer(self.d_head) for i in range(n_heads)]\n",
+    "        self.fc_layer = FCLayer(2048, self.d)\n",
+    "        \n",
+    "    def build(self, input_shape):\n",
+    "        [head.build(input_shape) for head in self.dec_attn_heads]\n",
+    "        [head.build(input_shape) for head in self.attn_heads]\n",
+    "        self.fc_layer.build(input_shape)\n",
+    "        \n",
+    "    def call(self, de_x, en_x, mask=None):\n",
+    "        \n",
+    "        def compute_multihead_output(de_x, en_x, mask=None):\n",
+    "            outputs = [head(en_x, en_x, de_x, mask)[0] for head in self.attn_heads]\n",
+    "            outputs = tf.concat(outputs, axis=-1)\n",
+    "            return outputs\n",
+    "        \n",
+    "        h1 = compute_multihead_output(de_x, de_x, mask)        \n",
+    "        h2 = compute_multihead_output(h1, en_x)\n",
+    "        y = self.fc_layer(h2)\n",
+    "        return y\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defining a Simple Transformer Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"embedding_22/Identity:0\", shape=(None, 25, 512), dtype=float32)\n",
+      "(None, 25, 512)\n",
+      "(None, 25, 512)\n",
+      "Model: \"MinTransformer\"\n",
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "input_23 (InputLayer)           [(None, 25)]         0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "embedding_22 (Embedding)        (None, 25, 512)      153600      input_23[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "input_24 (InputLayer)           [(None, 25)]         0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "encoder_layer_22 (EncoderLayer) (None, 25, 512)      2099712     embedding_22[0][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "embedding_23 (Embedding)        (None, 25, 512)      204800      input_24[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "encoder_layer_23 (EncoderLayer) (None, 25, 512)      2099712     encoder_layer_22[0][0]           \n",
+      "__________________________________________________________________________________________________\n",
+      "decoder_layer_11 (DecoderLayer) (None, 25, 512)      2886144     embedding_23[0][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "decoder_layer_12 (DecoderLayer) (None, 25, 512)      2886144     decoder_layer_11[0][0]           \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_5 (Dense)                 (None, 25, 400)      205200      decoder_layer_12[0][0]           \n",
+      "==================================================================================================\n",
+      "Total params: 10,535,312\n",
+      "Trainable params: 10,535,312\n",
+      "Non-trainable params: 0\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_steps = 25\n",
+    "n_en_vocab = 300\n",
+    "n_de_vocab = 400\n",
+    "n_heads = 8\n",
+    "d = 512\n",
+    "mask = 1 - tf.linalg.band_part(tf.ones((n_steps, n_steps)), -1, 0)\n",
+    "\n",
+    "en_inp = layers.Input(shape=(n_steps,))\n",
+    "en_emb = layers.Embedding(n_en_vocab, 512, input_length=n_steps)(en_inp)\n",
+    "print(en_emb)\n",
+    "en_out1 = EncoderLayer(d, n_heads)(en_emb)\n",
+    "en_out2 = EncoderLayer(d, n_heads)(en_out1)\n",
+    "\n",
+    "de_inp = layers.Input(shape=(n_steps,))\n",
+    "de_emb = layers.Embedding(n_de_vocab, 512, input_length=n_steps)(de_inp)\n",
+    "\n",
+    "de_out1 = DecoderLayer(d, n_heads)(de_emb, en_out2, mask)\n",
+    "de_out2 = DecoderLayer(d, n_heads)(de_out1, en_out2, mask)\n",
+    "de_pred = layers.Dense(n_de_vocab, activation='softmax')(de_out2)\n",
+    "\n",
+    "transformer = models.Model(inputs=[en_inp, de_inp], outputs=de_pred, name='MinTransformer')\n",
+    "transformer.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['acc'])\n",
+    "transformer.summary()"
    ]
   },
   {
