--- a/Ch02/3.Misc_Graphs.ipynb
+++ b/Ch02/3.Misc_Graphs.ipynb
@@ -10,6 +10,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table align=\"left\">\n",
+    "    <td>\n",
+    "        <a target=\"_blank\" href=\"https://colab.research.google.com/github/thushv89/manning_tf2_in_action/blob/master/3.Misc_Graphs.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+    "    </td>\n",
+    "</table>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
